--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>football team</title>
+    <script src="https://kit.fontawesome.com/5a80a24798.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- ----------
-    header section 
+    header section start
 --------------->
     <header>
       <section class="header">
@@ -30,9 +31,12 @@
         </div>
       </section>
     </header>
+    <!-- ----------
+    header section 
+--------------->
 
     <!-- ---------
-    main section
+    main section start
 ---------- -->
 
     <main>
@@ -155,6 +159,35 @@
           </div>
         </article>
       </section>
+      <!-- ---------
+    main section end
+---------- -->
+
+      <!----------------
+   footer section start
+  --------------- -->
     </main>
+    <footer>
+      <section class="footer-section">
+        <div class="footer-photo">
+          <img class="logo" src="images/Logo.png" alt="" />
+        </div>
+        <div class="social-link">
+          <h1>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-dribbble"></i></a>
+            <a href=""> <i class="fab fa-twitter"></i></a>
+            <a href=""> <i class="fab fa-youtube"></i></a>
+          </h1>
+        </div>
+        <div class="copyright-symble">
+          <p>copyright &#169; 2022 football</p>
+        </div>
+      </section>
+    </footer>
+
+    <!----------------
+   footer section end
+  --------------- -->
   </body>
 </html>
