--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
         </div>
         <div class="social-link">
           <h1>
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-dribbble"></i></a>
-            <a href=""> <i class="fab fa-twitter"></i></a>
-            <a href=""> <i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://dribbble.com/"><i class="fab fa-dribbble"></i></a>
+            <a href="https://twitter.com/"> <i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/"> <i class="fab fa-youtube"></i></a>
           </h1>
         </div>
         <div class="copyright-symble">
