--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
               copa america <br />
               2021
             </h1>
-            <button class="watch-live">
-              watch live <span style="font-size: 20px">&#8594;</span>
-            </button>
+            <a href="www.youtube.com"
+              ><button class="watch-live">
+                watch live <span style="font-size: 20px">&#8594;</span>
+              </button></a
+            >
           </article>
           <article class="team-banner">
             <img src="images/banner.png" alt="" />
@@ -53,6 +55,9 @@
               and the Brazil national team. He is widely regarded as one of the best players in the
               world
             </p>
+            <button class="watch-live">
+              watch live <span style="font-size: 20px">&#8594;</span>
+            </button>
           </div>
         </article>
         <article class="article">
@@ -159,14 +164,51 @@
           </div>
         </article>
       </section>
-      <!-- ---------
+    </main>
+    <!-- ---------
     main section end
 ---------- -->
 
-      <!----------------
+    <!----------------
    footer section start
   --------------- -->
-    </main>
+
+    <!-- highlighted section -->
+
+    <section class="highlighted">
+      <div class="box">
+        <div class="copa-info">
+          <h1>
+            all highlights <br />
+            copa america 2021
+          </h1>
+          <p>
+            Copa America 2021 is over, and Argentina is the queen of South America after 28 years,
+            with Messi finally winning his first international title. It was a long journey with 4
+            group matches and three knock-out matches. But let’s overview how the tournament went.
+          </p>
+          <a href="www.youtube.com"
+            ><button class="watch-live">
+              watch live <span style="font-size: 20px">&#8594;</span>
+            </button></a
+          >
+        </div>
+        <div class="copa-photo">
+          <img src="images/d0ae5761ff6865f1401e7bc454343985.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="user-accounts">
+      <div class="accounts">
+        <div class="login">
+          <h2>join our funs members team:<a href="form/signin.html">Sign In</a></h2>
+        </div>
+        <div class="signup">
+          <h2>create a new account:<a href="form/signup.html">Sign Up</a></h2>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <section class="footer-section">
         <div class="footer-photo">
@@ -181,7 +223,7 @@
           </h1>
         </div>
         <div class="copyright-symble">
-          <p>copyright &#169; 2022 football</p>
+          <p>copyright &#169; 2021 football</p>
         </div>
       </section>
     </footer>
